rydown/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> document
Rule 1     document -> <empty>
Rule 2     document -> document block
Rule 3     block -> heading
Rule 4     block -> subheading
Rule 5     block -> paragraph
Rule 6     block -> figure
Rule 7     block -> ulist
Rule 8     block -> olist
Rule 9     block -> block_code
Rule 10    block -> blockercode
Rule 11    block -> blockquote
Rule 12    block -> horizontalline
Rule 13    block -> table
Rule 14    block -> ref_link_url
Rule 15    olist -> olist_item
Rule 16    olist -> olist olist_item
Rule 17    olist_item -> OLIST_ITEM_START phrase_list
Rule 18    olist_item -> OLIST_ITEM_START phrase_list LIST_END
Rule 19    olist_item -> OLIST_ITEM_START phrase_list SINGLE_NEWLINE olist_2
Rule 20    olist_item -> OLIST_ITEM_START phrase_list SINGLE_NEWLINE ulist
Rule 21    olist_2 -> olist_item_2
Rule 22    olist_2 -> olist_2 olist_item_2
Rule 23    olist_item_2 -> OLIST_ITEM_2_START phrase_list
Rule 24    olist_item_2 -> OLIST_ITEM_2_START phrase_list LIST_END
Rule 25    olist_item_2 -> OLIST_ITEM_2_START phrase_list SINGLE_NEWLINE olist_3
Rule 26    olist_item_2 -> OLIST_ITEM_2_START phrase_list SINGLE_NEWLINE ulist
Rule 27    olist_3 -> olist_item_3
Rule 28    olist_3 -> olist_3 olist_item_3
Rule 29    olist_item_3 -> OLIST_ITEM_3_START phrase_list
Rule 30    olist_item_3 -> OLIST_ITEM_3_START phrase_list LIST_END
Rule 31    olist_item_3 -> OLIST_ITEM_3_START phrase_list SINGLE_NEWLINE olist_4
Rule 32    olist_item_3 -> OLIST_ITEM_3_START phrase_list SINGLE_NEWLINE ulist
Rule 33    olist_4 -> olist_item_4
Rule 34    olist_4 -> olist_4 olist_item_4
Rule 35    olist_item_4 -> OLIST_ITEM_4_START phrase_list
Rule 36    olist_item_4 -> OLIST_ITEM_4_START phrase_list LIST_END
Rule 37    ulist -> ulist_item
Rule 38    ulist -> ulist ulist_item
Rule 39    ulist_item -> ULIST_ITEM_START phrase_list
Rule 40    ulist_item -> ULIST_ITEM_START phrase_list LIST_END
Rule 41    ulist_item -> ULIST_ITEM_START phrase_list SINGLE_NEWLINE olist_2
Rule 42    heading -> HEADING_START phrase_list HEADING_END SINGLE_NEWLINE
Rule 43    heading -> HEADING_START phrase bothendlines
Rule 44    subheading -> phrase_list SINGLE_NEWLINE UNDERDIVIDER bothendlines
Rule 45    subheading -> phrase_list SINGLE_NEWLINE HORIZONTALLINE bothendlines
Rule 46    horizontalline -> MULTIPLE_NEWLINES HORIZONTALLINE MULTIPLE_NEWLINES
Rule 47    paragraph -> phrase_list MULTIPLE_NEWLINES
Rule 48    figure -> FIG_START phrase_list FIG_URL MULTIPLE_NEWLINES
Rule 49    table_body -> TCONTENT SINGLE_NEWLINE table_body
Rule 50    table_body -> TCONTENT SINGLE_NEWLINE
Rule 51    table_body -> TCONTENT
Rule 52    table -> TCONTENT SINGLE_NEWLINE TMARKER SINGLE_NEWLINE table_body bothendlines
Rule 53    block_code -> BLOCK_CODE
Rule 54    blockercode -> BLOCKERCODEONE bothendlines
Rule 55    blockercode -> BLOCKERCODETWO bothendlines
Rule 56    blockquote -> BLOCKQUOTE phrase_list MULTIPLE_NEWLINES
Rule 57    blockquote -> BLOCKQUOTE phrase_list blockquote
Rule 58    blockquote -> BLOCKQUOTE SINGLE_NEWLINE blockquote
Rule 59    blockquote -> BLOCKQUOTE MULTIPLE_NEWLINES
Rule 60    phrase_list -> phrase
Rule 61    phrase_list -> phrase_list phrase
Rule 62    phrase -> link
Rule 63    phrase -> ref_link
Rule 64    phrase -> emphasisstrong
Rule 65    phrase -> emphasis
Rule 66    phrase -> strong
Rule 67    phrase -> inline_code
Rule 68    phrase -> COMMENT
Rule 69    phrase -> text
Rule 70    emphasisstrong -> EMPHASISSTRONG
Rule 71    emphasis -> EMPHASIS
Rule 72    strong -> STRONG
Rule 73    inline_code -> INLINE_CODE
Rule 74    link -> LINK_START phrase_list LINK_URL
Rule 75    ref_link -> REF_LINK_START phrase_list REF_LINK_KEY
Rule 76    ref_link_url -> REF_LINK_URL bothendlines
Rule 77    text -> PLAINTEXT
Rule 78    text -> TCONTENT
Rule 79    text -> LINK_SPECIAL_CHARS
Rule 80    text -> SINGLE_NEWLINE
Rule 81    text -> ESCAPE_SEQUENCE
Rule 82    bothendlines -> SINGLE_NEWLINE
Rule 83    bothendlines -> MULTIPLE_NEWLINES

Terminals, with rules where they appear

BLOCKERCODEONE       : 54
BLOCKERCODETWO       : 55
BLOCKQUOTE           : 56 57 58 59
BLOCK_CODE           : 53
COMMENT              : 68
EMPHASIS             : 71
EMPHASISSTRONG       : 70
ESCAPE_SEQUENCE      : 81
FIG_START            : 48
FIG_URL              : 48
HEADING_END          : 42
HEADING_START        : 42 43
HORIZONTALLINE       : 45 46
INLINE_CODE          : 73
LINK_SPECIAL_CHARS   : 79
LINK_START           : 74
LINK_URL             : 74
LIST_END             : 18 24 30 36 40
MULTIPLE_NEWLINES    : 46 46 47 48 56 59 83
OLIST_ITEM_2_START   : 23 24 25 26
OLIST_ITEM_3_START   : 29 30 31 32
OLIST_ITEM_4_START   : 35 36
OLIST_ITEM_START     : 17 18 19 20
PLAINTEXT            : 77
REF_LINK_KEY         : 75
REF_LINK_START       : 75
REF_LINK_URL         : 76
SINGLE_NEWLINE       : 19 20 25 26 31 32 41 42 44 45 49 50 52 52 58 80 82
STRONG               : 72
TCONTENT             : 49 50 51 52 78
TMARKER              : 52
ULIST_ITEM_START     : 39 40 41
UNDERDIVIDER         : 44
error                : 

Nonterminals, with rules where they appear

block                : 2
block_code           : 9
blockercode          : 10
blockquote           : 11 57 58
bothendlines         : 43 44 45 52 54 55 76
document             : 2 0
emphasis             : 65
emphasisstrong       : 64
figure               : 6
heading              : 3
horizontalline       : 12
inline_code          : 67
link                 : 62
olist                : 8 16
olist_2              : 19 22 41
olist_3              : 25 28
olist_4              : 31 34
olist_item           : 15 16
olist_item_2         : 21 22
olist_item_3         : 27 28
olist_item_4         : 33 34
paragraph            : 5
phrase               : 43 60 61
phrase_list          : 17 18 19 20 23 24 25 26 29 30 31 32 35 36 39 40 41 42 44 45 47 48 56 57 61 74 75
ref_link             : 63
ref_link_url         : 14
strong               : 66
subheading           : 4
table                : 13
table_body           : 49 52
text                 : 69
ulist                : 7 20 26 32 38
ulist_item           : 37 38

Parsing method: LALR

state 0

    (0) S' -> . document
    (1) document -> .
    (2) document -> . document block

    HEADING_START   reduce using rule 1 (document -> .)
    FIG_START       reduce using rule 1 (document -> .)
    BLOCK_CODE      reduce using rule 1 (document -> .)
    BLOCKERCODEONE  reduce using rule 1 (document -> .)
    BLOCKERCODETWO  reduce using rule 1 (document -> .)
    BLOCKQUOTE      reduce using rule 1 (document -> .)
    MULTIPLE_NEWLINES reduce using rule 1 (document -> .)
    TCONTENT        reduce using rule 1 (document -> .)
    REF_LINK_URL    reduce using rule 1 (document -> .)
    ULIST_ITEM_START reduce using rule 1 (document -> .)
    OLIST_ITEM_START reduce using rule 1 (document -> .)
    COMMENT         reduce using rule 1 (document -> .)
    LINK_START      reduce using rule 1 (document -> .)
    REF_LINK_START  reduce using rule 1 (document -> .)
    EMPHASISSTRONG  reduce using rule 1 (document -> .)
    EMPHASIS        reduce using rule 1 (document -> .)
    STRONG          reduce using rule 1 (document -> .)
    INLINE_CODE     reduce using rule 1 (document -> .)
    PLAINTEXT       reduce using rule 1 (document -> .)
    LINK_SPECIAL_CHARS reduce using rule 1 (document -> .)
    SINGLE_NEWLINE  reduce using rule 1 (document -> .)
    ESCAPE_SEQUENCE reduce using rule 1 (document -> .)
    $end            reduce using rule 1 (document -> .)

    document                       shift and go to state 1

state 1

    (0) S' -> document .
    (2) document -> document . block
    (3) block -> . heading
    (4) block -> . subheading
    (5) block -> . paragraph
    (6) block -> . figure
    (7) block -> . ulist
    (8) block -> . olist
    (9) block -> . block_code
    (10) block -> . blockercode
    (11) block -> . blockquote
    (12) block -> . horizontalline
    (13) block -> . table
    (14) block -> . ref_link_url
    (42) heading -> . HEADING_START phrase_list HEADING_END SINGLE_NEWLINE
    (43) heading -> . HEADING_START phrase bothendlines
    (44) subheading -> . phrase_list SINGLE_NEWLINE UNDERDIVIDER bothendlines
    (45) subheading -> . phrase_list SINGLE_NEWLINE HORIZONTALLINE bothendlines
    (47) paragraph -> . phrase_list MULTIPLE_NEWLINES
    (48) figure -> . FIG_START phrase_list FIG_URL MULTIPLE_NEWLINES
    (37) ulist -> . ulist_item
    (38) ulist -> . ulist ulist_item
    (15) olist -> . olist_item
    (16) olist -> . olist olist_item
    (53) block_code -> . BLOCK_CODE
    (54) blockercode -> . BLOCKERCODEONE bothendlines
    (55) blockercode -> . BLOCKERCODETWO bothendlines
    (56) blockquote -> . BLOCKQUOTE phrase_list MULTIPLE_NEWLINES
    (57) blockquote -> . BLOCKQUOTE phrase_list blockquote
    (58) blockquote -> . BLOCKQUOTE SINGLE_NEWLINE blockquote
    (59) blockquote -> . BLOCKQUOTE MULTIPLE_NEWLINES
    (46) horizontalline -> . MULTIPLE_NEWLINES HORIZONTALLINE MULTIPLE_NEWLINES
    (52) table -> . TCONTENT SINGLE_NEWLINE TMARKER SINGLE_NEWLINE table_body bothendlines
    (76) ref_link_url -> . REF_LINK_URL bothendlines
    (60) phrase_list -> . phrase
    (61) phrase_list -> . phrase_list phrase
    (39) ulist_item -> . ULIST_ITEM_START phrase_list
    (40) ulist_item -> . ULIST_ITEM_START phrase_list LIST_END
    (41) ulist_item -> . ULIST_ITEM_START phrase_list SINGLE_NEWLINE olist_2
    (17) olist_item -> . OLIST_ITEM_START phrase_list
    (18) olist_item -> . OLIST_ITEM_START phrase_list LIST_END
    (19) olist_item -> . OLIST_ITEM_START phrase_list SINGLE_NEWLINE olist_2
    (20) olist_item -> . OLIST_ITEM_START phrase_list SINGLE_NEWLINE ulist
    (62) phrase -> . link
    (63) phrase -> . ref_link
    (64) phrase -> . emphasisstrong
    (65) phrase -> . emphasis
    (66) phrase -> . strong
    (67) phrase -> . inline_code
    (68) phrase -> . COMMENT
    (69) phrase -> . text
    (74) link -> . LINK_START phrase_list LINK_URL
    (75) ref_link -> . REF_LINK_START phrase_list REF_LINK_KEY
    (70) emphasisstrong -> . EMPHASISSTRONG
    (71) emphasis -> . EMPHASIS
    (72) strong -> . STRONG
    (73) inline_code -> . INLINE_CODE
    (77) text -> . PLAINTEXT
    (78) text -> . TCONTENT
    (79) text -> . LINK_SPECIAL_CHARS
    (80) text -> . SINGLE_NEWLINE
    (81) text -> . ESCAPE_SEQUENCE

    HEADING_START   shift and go to state 9
    FIG_START       shift and go to state 18
    BLOCK_CODE      shift and go to state 4
    BLOCKERCODEONE  shift and go to state 5
    BLOCKERCODETWO  shift and go to state 29
    BLOCKQUOTE      shift and go to state 2
    MULTIPLE_NEWLINES shift and go to state 32
    TCONTENT        shift and go to state 40
    REF_LINK_URL    shift and go to state 33
    ULIST_ITEM_START shift and go to state 44
    OLIST_ITEM_START shift and go to state 15
    COMMENT         shift and go to state 26
    LINK_START      shift and go to state 21
    REF_LINK_START  shift and go to state 16
    EMPHASISSTRONG  shift and go to state 47
    EMPHASIS        shift and go to state 22
    STRONG          shift and go to state 12
    INLINE_CODE     shift and go to state 6
    PLAINTEXT       shift and go to state 20
    LINK_SPECIAL_CHARS shift and go to state 13
    SINGLE_NEWLINE  shift and go to state 34
    ESCAPE_SEQUENCE shift and go to state 31

    figure                         shift and go to state 3
    text                           shift and go to state 25
    ref_link_url                   shift and go to state 7
    emphasisstrong                 shift and go to state 8
    phrase                         shift and go to state 11
    olist_item                     shift and go to state 42
    phrase_list                    shift and go to state 14
    inline_code                    shift and go to state 17
    block_code                     shift and go to state 19
    subheading                     shift and go to state 23
    emphasis                       shift and go to state 24
    ref_link                       shift and go to state 27
    blockquote                     shift and go to state 28
    blockercode                    shift and go to state 30
    link                           shift and go to state 35
    ulist_item                     shift and go to state 36
    ulist                          shift and go to state 37
    strong                         shift and go to state 38
    table                          shift and go to state 10
    horizontalline                 shift and go to state 39
    paragraph                      shift and go to state 41
    olist                          shift and go to state 43
    heading                        shift and go to state 45
    block                          shift and go to state 46

state 2

    (56) blockquote -> BLOCKQUOTE . phrase_list MULTIPLE_NEWLINES
    (57) blockquote -> BLOCKQUOTE . phrase_list blockquote
    (58) blockquote -> BLOCKQUOTE . SINGLE_NEWLINE blockquote
    (59) blockquote -> BLOCKQUOTE . MULTIPLE_NEWLINES
    (60) phrase_list -> . phrase
    (61) phrase_list -> . phrase_list phrase
    (62) phrase -> . link
    (63) phrase -> . ref_link
    (64) phrase -> . emphasisstrong
    (65) phrase -> . emphasis
    (66) phrase -> . strong
    (67) phrase -> . inline_code
    (68) phrase -> . COMMENT
    (69) phrase -> . text
    (74) link -> . LINK_START phrase_list LINK_URL
    (75) ref_link -> . REF_LINK_START phrase_list REF_LINK_KEY
    (70) emphasisstrong -> . EMPHASISSTRONG
    (71) emphasis -> . EMPHASIS
    (72) strong -> . STRONG
    (73) inline_code -> . INLINE_CODE
    (77) text -> . PLAINTEXT
    (78) text -> . TCONTENT
    (79) text -> . LINK_SPECIAL_CHARS
    (80) text -> . SINGLE_NEWLINE
    (81) text -> . ESCAPE_SEQUENCE

    SINGLE_NEWLINE  shift and go to state 50
    MULTIPLE_NEWLINES shift and go to state 49
    COMMENT         shift and go to state 26
    LINK_START      shift and go to state 21
    REF_LINK_START  shift and go to state 16
    EMPHASISSTRONG  shift and go to state 47
    EMPHASIS        shift and go to state 22
    STRONG          shift and go to state 12
    INLINE_CODE     shift and go to state 6
    PLAINTEXT       shift and go to state 20
    TCONTENT        shift and go to state 51
    LINK_SPECIAL_CHARS shift and go to state 13
    ESCAPE_SEQUENCE shift and go to state 31

    ref_link                       shift and go to state 27
    text                           shift and go to state 25
    inline_code                    shift and go to state 17
    emphasis                       shift and go to state 24
    link                           shift and go to state 35
    emphasisstrong                 shift and go to state 8
    phrase                         shift and go to state 11
    strong                         shift and go to state 38
    phrase_list                    shift and go to state 48

state 3

    (6) block -> figure .

    HEADING_START   reduce using rule 6 (block -> figure .)
    FIG_START       reduce using rule 6 (block -> figure .)
    BLOCK_CODE      reduce using rule 6 (block -> figure .)
    BLOCKERCODEONE  reduce using rule 6 (block -> figure .)
    BLOCKERCODETWO  reduce using rule 6 (block -> figure .)
    BLOCKQUOTE      reduce using rule 6 (block -> figure .)
    MULTIPLE_NEWLINES reduce using rule 6 (block -> figure .)
    TCONTENT        reduce using rule 6 (block -> figure .)
    REF_LINK_URL    reduce using rule 6 (block -> figure .)
    ULIST_ITEM_START reduce using rule 6 (block -> figure .)
    OLIST_ITEM_START reduce using rule 6 (block -> figure .)
    COMMENT         reduce using rule 6 (block -> figure .)
    LINK_START      reduce using rule 6 (block -> figure .)
    REF_LINK_START  reduce using rule 6 (block -> figure .)
    EMPHASISSTRONG  reduce using rule 6 (block -> figure .)
    EMPHASIS        reduce using rule 6 (block -> figure .)
    STRONG          reduce using rule 6 (block -> figure .)
    INLINE_CODE     reduce using rule 6 (block -> figure .)
    PLAINTEXT       reduce using rule 6 (block -> figure .)
    LINK_SPECIAL_CHARS reduce using rule 6 (block -> figure .)
    SINGLE_NEWLINE  reduce using rule 6 (block -> figure .)
    ESCAPE_SEQUENCE reduce using rule 6 (block -> figure .)
    $end            reduce using rule 6 (block -> figure .)


state 4

    (53) block_code -> BLOCK_CODE .

    HEADING_START   reduce using rule 53 (block_code -> BLOCK_CODE .)
    FIG_START       reduce using rule 53 (block_code -> BLOCK_CODE .)
    BLOCK_CODE      reduce using rule 53 (block_code -> BLOCK_CODE .)
    BLOCKERCODEONE  reduce using rule 53 (block_code -> BLOCK_CODE .)
    BLOCKERCODETWO  reduce using rule 53 (block_code -> BLOCK_CODE .)
    BLOCKQUOTE      reduce using rule 53 (block_code -> BLOCK_CODE .)
    MULTIPLE_NEWLINES reduce using rule 53 (block_code -> BLOCK_CODE .)
    TCONTENT        reduce using rule 53 (block_code -> BLOCK_CODE .)
    REF_LINK_URL    reduce using rule 53 (block_code -> BLOCK_CODE .)
    ULIST_ITEM_START reduce using rule 53 (block_code -> BLOCK_CODE .)
    OLIST_ITEM_START reduce using rule 53 (block_code -> BLOCK_CODE .)
    COMMENT         reduce using rule 53 (block_code -> BLOCK_CODE .)
    LINK_START      reduce using rule 53 (block_code -> BLOCK_CODE .)
    REF_LINK_START  reduce using rule 53 (block_code -> BLOCK_CODE .)
    EMPHASISSTRONG  reduce using rule 53 (block_code -> BLOCK_CODE .)
    EMPHASIS        reduce using rule 53 (block_code -> BLOCK_CODE .)
    STRONG          reduce using rule 53 (block_code -> BLOCK_CODE .)
    INLINE_CODE     reduce using rule 53 (block_code -> BLOCK_CODE .)
    PLAINTEXT       reduce using rule 53 (block_code -> BLOCK_CODE .)
    LINK_SPECIAL_CHARS reduce using rule 53 (block_code -> BLOCK_CODE .)
    SINGLE_NEWLINE  reduce using rule 53 (block_code -> BLOCK_CODE .)
    ESCAPE_SEQUENCE reduce using rule 53 (block_code -> BLOCK_CODE .)
    $end            reduce using rule 53 (block_code -> BLOCK_CODE .)


state 5

    (54) blockercode -> BLOCKERCODEONE . bothendlines
    (82) bothendlines -> . SINGLE_NEWLINE
    (83) bothendlines -> . MULTIPLE_NEWLINES

    SINGLE_NEWLINE  shift and go to state 52
    MULTIPLE_NEWLINES shift and go to state 53

    bothendlines                   shift and go to state 54

state 6

    (73) inline_code -> INLINE_CODE .
